# flakes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build.py
apps/cli/: CMakeLists.txt
apps/cli/src/: main.c  options.c  options.h
libs/core/: CMakeLists.txt
libs/core/include/: algebraic.h  board.h  core.h  fen.h  legal.h  move.h  move_lut.h  square.h  zobrist.h
libs/core/src/: algebraic.c  board.c  fen.c  legal.c  move_lut.c  zobrist.c
libs/engine/: CMakeLists.txt
libs/engine/include/: engine.h  search.h  static.h
libs/engine/src/: engine.c  search.c  static.c
libs/utils/: CMakeLists.txt
libs/utils/include/: defines.h  platform.h  types.h  utils.h
